--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "bootstrap": "^5.1.3",
     "connectkit": "^0.0.2",
     "ethers": "^5.7.1",
+    "formik": "^2.2.9",
+    "install": "^0.13.0",
+    "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -25,8 +28,10 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.3",
+    "uuidv4": "^6.2.13",
     "wagmi": "^0.6.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.0.0"
   }
 }
